// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`marks the file on request 1`] = `
"---
name: Proposal
about: Suggest a change that needs discussion before implementation.
title: "[proposal] "
labels:
  - proposal
---

<!-- ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen". -->

## Problem

What is currently hard, and for whom?

## Proposed change

What would you do instead?

## Alternatives considered

## Out of scope
"
`;

exports[`writes a Markdown issue template 1`] = `
"---
name: Proposal
about: Suggest a change that needs discussion before implementation.
title: "[proposal] "
labels:
  - proposal
---

## Problem

What is currently hard, and for whom?

## Proposed change

What would you do instead?

## Alternatives considered

## Out of scope
"
`;
